code/style.css
/* STYLE FOR PROJECT: PORTFOLIO */
/* ======================================================= */

/* TYPOGRAPHY */

/* Fonts imported from Google Fonts */
@import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@300;400;700&family=Roboto:wght@300;400;700&display=swap');

/* ======================================================= */

/* BASIC STYLING */

* {
    box-sizing: border-box;
    -webkit-box-sizing: border-box;
    -moz-box-sizing: border-box;
    -webkit-font-smoothing: antialiased;
    text-rendering: optimizeLegibility;
    margin: 0;
    padding: 0;
}

html {
    scroll-behavior: smooth;
}

body {
    font-family: 'Montserrat', 'sans-serif';
}

.introduction-link {
    color: #ffab1b;
    text-decoration: none;
    cursor: pointer;
    font-weight: bold;
}

.introduction-link:hover {
    color: #000000;
    transition: 0.5s ease;
}

/* ======================================================= */

/* STYLE FOR THE HEADER */

.portfolio-header {
    font-family: 'Roboto', sans-serif;
    font-size: 16px;
    color: #000000;
    font-weight: lighter;
    padding: 5px;
}

.name {
    font-weight: bold;
}

.header-h1 {
    color: #000000;
    font: bold;
    font-size: 40px;
}

.header-h2 {
    color: #000000;
    font: bold;
    margin-top: 10px;
}

.header {
    display: flex;
    flex-direction: column;
    align-items: flex-end;
    justify-content: space-between;
    width: 100%;
    /* Photo by Martin Adams from Unsplash */
    background-image: url(./img/martin-adams-MpTdvXlAsVE-unsplash.jpg);
    background-repeat: no-repeat;
    background-size: cover;
    height: 500px;
    padding: 46px 32px 0 32px;
}

.header-text {
align-self: flex-start;
}

/* Style for icons and profile picture */
.icon {
    display: inline-flex;
    justify-content: center;
    border: 3px solid #000000;
    border-radius: 50%;
    width: 50px;
    height: 50px;
    cursor: pointer;
}

.profile-picture {
    width: 200px;
    height: 200px;
    border: 3px solid #000000;
    border-radius: 50%;
    margin-bottom: -25px;
}

/* ======================================================= */

/* STYLE FOR LINE-DOT + BOXES */

/* Style for line with dot in introduction */

.line {
    border: 1px solid #ffab1b;
    width: 40px;
    display: inline-block;
    margin-bottom: 4px;
}

.dot {
    margin-right: 5px;
    height: 10px;
    width: 10px;
    background-color: #ffab1b;
    border-radius: 50%;
    display: inline-block;
}

/* Style for the colored box around section headings */
.heading-box {
    font-size: 22px;
    text-align: center;
    background: #000000;
    color: #ffffff;
    margin: auto;
    padding: 1px 16px 1px 16px;
}

/* ======================================================= */

/* STYLE FOR SECTIONS */

/* Basic styling for the grey and white sections */
.section-grey {
    display: flex;
    flex-direction: column;
    justify-content: center;
    background: #f5f5f5;
    height: 100%;
    padding: 46px 32px 46px 32px;
    font-size: 16px;
    letter-spacing: 0.2px;
    line-height: 1.6;
}

.section-white {
    display: flex;
    flex-direction: column;
    text-align: center;
    justify-content: center;
    background: #ffffff;
    height: 100%;
    padding: 46px 32px 46px 32px;
    font-size: 16px;
    letter-spacing: 0.2px;
    line-height: 1.6;
}

.feature-wrapper, .other-more-wrapper {
    display: flex;
    flex-direction: column;
    justify-content: center;
    align-items: center;
    margin-top: 40px;
    max-width: 100%;
}

/* Basic styling for articles and cards in project and thoughts section */
.article-card {
    max-width: 400px;
}

.card-link {
    color: #000000;
    text-decoration: none;
    cursor: pointer;
} 

.card-img {
    max-width: 100%;
}

/* OVERLAY */

.overlay-container {
    position: relative;
    max-width: 100%;
  }
  
  .article-image {
    display: block;
    max-width: 100%;
    height: auto;
  }
  
  .overlay {
    position: absolute;
    top: 0;
    bottom: 0;
    left: 0;
    right: 0;
    max-width: 100%;
    opacity: 1;
    transition: .5s ease;
    background-color: #00000076;
  }
  
  .overlay-container:hover .overlay {
    opacity: 0;
  }
  
  .overlay-text {
    color: white;
    font-size: 20px;
    font-weight: bold;
    position: absolute;
    top: 50%;
    left: 50%;
    -webkit-transform: translate(-50%, -50%);
    -ms-transform: translate(-50%, -50%);
    transform: translate(-50%, -50%);
    text-align: center;
  }

.article-description {
    font-family: 'Roboto', 'sans-serif';
    font-size: 16px;
    margin-top: 12px;
}

.article-title, .arrow {
    color: #ffab1b;
    font-weight: bold;
    font-size: 18px;
}

.arrow {
    text-decoration: underline;
}

.tags {
    display: inline-flex;
    margin: 15px 0px 50px 0px;
}

.category {
    font-family: 'Roboto';
    font-size: 14px;
    background: #ffe9c0;
    color: #000000;
    margin-right: 10px;
    padding: 2px 6px 2px 6px;
}

.header-h3 {
    text-align: center;
    color: #ffab1b;
    margin-top: 40px;
    font-size: 20px;
}

/* ======================================================= */

/* SPECIFIC STYLING NEEDED FOR THE DIFFERENT SECTIONS */

/* Specific style for tech-section */
.tech-text {
    margin-top: 20px;
}

/* Specific style for project - section */
.other-more-wrapper {
    margin-top: 15px;
}

/* Specific style for thoughts - section */

.section-white.thoughts-section {
    text-align: left;
}

.date {
    font-family: 'Roboto', 'sans-serif';
    color: #ffab1b;
    margin-top: 15px;
    margin-bottom: 4px;
    font-weight: bold;
}

.thoughts-heading {
    font-family: 'Roboto', 'sans-serif';
    font-weight: bold;
}

.article-description.thoughts {
    margin-top: 4px;
    margin-bottom: 40px;
}

.more-thoughts-link {
    margin-top: 20px;
    font-family: 'Roboto', 'sans-serif';
    font-weight: bold;
    color: #000000;
}

/* Specific style for skills - section */

.section-grey.skills {
    text-align: center;
}

.skills-wrapper {
    display: flex;
    justify-content: flex-end;
    flex-wrap: wrap;
    font-family: 'Roboto', 'Sans-serif';
}

.skills-container {
    width: 50%;
}

.skills-heading {
    color: #ffab1b;
    margin-top: 20px;
}

/* Style for the for more - section */
.big-icon {
    display: inline-flex;
    justify-content: center;
    border: 3px solid #ffab1b;
    border-radius: 50%;
    width: 70px;
    height: 70px;
    margin-top: 30px;
    margin-right: 10px;
    cursor: pointer;
}

/* ======================================================= */

/* STYLE FOR THE FOOTER */

.footer {
    display: flex;
    flex-direction: column;
    text-align: center;
    justify-content: center;
    color: #000000; 
    background: #ffe9c0;  
    height: 250px;
    font-size: 16px;
    letter-spacing: 0.2px;
    line-height: 2.0;
}

.footer-text {
    font-weight: bold;
}

.email-link {
    color: #000000;
    text-decoration: none;
    cursor: pointer;
}

.email-link:hover {
    color: #F28705;
    transition: 0.5s ease;
}

/* ======================================================= */

/* MEDIA QUERIES - Responsive design */

@media screen and (min-width: 280px) {

    .heading-box {
        font-size: 18px;
    }
    
    /* Profile picture */
    .profile-picture {
        width: 150px;
        height: 150px;
    }
}

@media screen and (min-width:420px) {
    .heading-box {
        font-size: 18px;
    }
}

  
@media screen and (min-width:768px) {
    
    .profile-picture {
        width: 180px;
        height: 180px;
    }
    
    .header {
        padding: 86px 62px 0px 62px;
    }

    .section-grey {
        padding: 62px;
    }

    .section-white {
        padding: 62px;
    }

}

@media screen and (min-width:1024px) {

    .header {
        padding: 100px 120px 90px 120px;
    }

    .profile-picture {
        width: 250px;
        height: 250px;
    }

    .introduction-text {
        padding-left: 90px;
        padding-right: 90px;
    }

    .section-grey {
        padding: 60px 72px 90px 72px;
    }

    .section-white {
        padding: 60px 72px 90px 72px;
    }

    /* On desktop / larger tablets: display projects and blogposts on rows instead of column */
    .feature-wrapper {
        display: flex;
        flex-direction: row;
        flex-wrap: wrap;
    }

    .article-card {
        margin: 20px;
    }

    .skills-wrapper {
        justify-content: flex-start;
        text-align: center;
    }
    .skills-container {
        width: 33%;
    }
}

@media screen and (min-width:1200px) {

    .header {
        padding: 120px 250px 100px 250px;
    }

    .section-grey {
        padding: 60px 160px 80px 160px;
    }

    .section-white {
        padding: 60px 180px 80px 180px;
    }
}


@media screen and (min-width:1500px) {

    .header {
        padding: 120px 400px 100px 400px;
    }

    .section-grey {
        padding: 100px 310px 100px 310px;
    }

    .section-white {
        padding: 100px 310px 100px 310px;
    }
}

/* ======================================================= */

